--- a/css/home/home.css
+++ b/css/home/home.css
@@ -62,6 +62,8 @@ section {
 .footer {
   width: 100vw;
   height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
   overflow: hidden;
   /* background-color: var(--bg); */
 }
